--- a/Templates/about.html
+++ b/Templates/about.html
@@ -1,3 +1,3 @@
-<i>This project was created by Ankit Ghildiyal on 10th March,2020 as part of the Udemy Django course</i>
+<i><b>This project was created by Ankit Ghildiyal on 10th March,2020 as part of the Udemy Django course</b></i>
 <br/>
 <a href="{%url 'home'%}">Back to home page</a>
